linux/roles/wod.k8s-gitlab/templates/gitlab.yml
---
# Source: gitlab/templates/gitlab.svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: 
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - name: gitlab
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: 
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  type: NodePort
  ports:
  - name: gitlab-ssh
    port: 22
    targetPort: 22
    nodePort: 10022
    protocol: TCP    
---
# Source: gitlab/templates/postgresql.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-postgresql
  namespace: devops
  labels:
    app: gitlab-postgresql
spec:
  selector:
    app: gitlab-postgresql
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP  
---
# Source: gitlab/templates/redis.svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  namespace: 
  labels:
    app: gitlab-redis
spec:
  selector:
    app: gitlab-redis
  ports:
  - name: redis
    port: 6379
    protocol: TCP
---
# Source: gitlab/templates/gitlab.dp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab
  namespace: 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
        version: 11.2.3
    spec:
      containers:  
      - name: gitlab
        image: "registry-vpc.cn-qingdao.aliyuncs.com/wod/sameersbn-gitlab:11.2.3"
        ports:
        - containerPort: 80
          name: http
        - containerPort: 22
          name: ssh
        volumeMounts:
        - name: data
          mountPath: /home/git/data        
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitlab
---
# Source: gitlab/templates/postgresql.dp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab-postgresql
  namespace: 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-postgresql
        version: "10"
    spec:
      containers:    
      - name: postgresql
        image: "registry-vpc.cn-qingdao.aliyuncs.com/wod/sameersbn-postgresql:10"
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
        ports:
        - containerPort: 5432
          name: postgresql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitlab-postgresql 
---
# Source: gitlab/templates/redis.dp.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab-redis
  namespace: devops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-redis
        version: 4.0.9-1
    spec:
      containers:
      - name: redis
        image: "registry-vpc.cn-qingdao.aliyuncs.com/wod/sameersbn-redis:4.0.9-1"
        ports:
        - containerPort: 6379
          name: redis 
        volumeMounts:
        - name: data
          mountPath: /var/lib/redis
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitlab-redis
---
# Source: gitlab/templates/gitlab.ig.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gitlab.wodcloud.com
    http:
      paths:
      - path: /cloud
        backend:
          serviceName: gitlab
          servicePort: 80
